--- a/eclipse-project/res/values/strings.xml
+++ b/eclipse-project/res/values/strings.xml
@@ -17,15 +17,21 @@
     <string name="config_cat_display">Display</string>
     <string name="config_cat_save">Saving</string>
     <string name="config_cat_search">Search</string>
-    <string name="config_line_numbers">Show line numbers</string>
-    <string name="config_word_wrap">Word wrap</string>
-    <string name="config_text_size">Text size</string>
-    <string name="config_color_theme">Color theme</string>
-    <string name="config_end_of_lines">End of lines</string>
-    <string name="config_max_recent">Maximum recent files</string>
-    <string name="config_search_wrap">Search wrap</string>
-    <string name="config_search_match_case">Search match case</string>
-    <string name="config_encoding">Encoding</string>
+    <string name="config_cat_misc">Miscellaneous</string>
+    <string name="config_title_line_numbers">Show line numbers</string>
+    <string name="config_title_word_wrap">Word wrap</string>
+    <string name="config_title_text_size">Text size</string>
+    <string name="config_title_color_theme">Color theme</string>
+    <string name="config_title_end_of_lines">End of lines</string>
+    <string name="config_title_max_recent">Maximum recent files</string>
+    <string name="config_title_search_wrap">Search wrap</string>
+    <string name="config_title_search_match_case">Search match case</string>
+    <string name="config_title_encoding">Encoding</string>
+    <string name="config_title_scroll_fling">Fling to scroll faster</string>
+    <string name="config_summary_line_numbers">Display the line number at the left of the page</string>
+    <string name="config_summary_word_wrap">Lines will break in new lines if they are too wide for the screen</string>
+    <string name="config_summary_search_wrap">Search from the top of the document if the end of the document is reached</string>
+    <string name="config_summary_scroll_fling">Uncheck if you have performance issues</string>
 
     <!-- Options Menu in TED -->
     <string name="menu_new">New</string>
