--- a/eclipse-project/res/values/strings.xml
+++ b/eclipse-project/res/values/strings.xml
@@ -16,6 +16,7 @@
     <!-- Config screen strings -->
     <string name="config_cat_display">Display</string>
     <string name="config_cat_save">Saving</string>
+    <string name="config_cat_undo">Undo</string>
     <string name="config_cat_search">Search</string>
     <string name="config_cat_misc">Miscellaneous</string>
     <string name="config_title_line_numbers">Show line numbers</string>
@@ -28,6 +29,9 @@
     <string name="config_title_search_match_case">Search match case</string>
     <string name="config_title_encoding">Encoding</string>
     <string name="config_title_scroll_fling">Fling to scroll faster</string>
+    <string name="config_title_allow_undo_stack">Allow undo</string>
+    <string name="config_title_max_undo_stack">Maximum undo history</string>
+    <string name="config_title_back_to_undo">Use the back button to undo previous modifications</string>
     <string name="config_summary_line_numbers">Display the line number at the left of the page</string>
     <string name="config_summary_word_wrap">Lines will break in new lines if they are too wide for the screen</string>
     <string name="config_summary_scroll_fling">Uncheck if you have performance issues</string>
@@ -41,6 +45,9 @@
     <string name="menu_settings">Settings</string>
     <string name="menu_about">About</string>
     <string name="menu_search">Search</string>
+    <string name="menu_undo">Undo</string>
+    <string name="menu_redo">Redo</string>
+    <string name="menu_quit">Quit</string>
 
     <!-- Misc UI strings -->
     <string name="ui_save_text">"Do you want to save your document? \nAny unsaved changes will be lost. "</string>
