--- a/Ted/res/values/strings.xml
+++ b/Ted/res/values/strings.xml
@@ -3,7 +3,7 @@
 
     <string name="app_name">Ted</string>
     <string name="app_name_full">Ted (Text Editor)</string>
-    
+
     <!--  -->
     <string name="permission_internal">Ted Internal Permission</string>
 
@@ -15,15 +15,18 @@
     <string name="title_open_recent">Ted - Open Recent</string>
     <string name="title_settings">Ted - Settings </string>
     <string name="title_about">Ted - About ... </string>
+    <string name="title_font">Ted - Text Font </string>
 
     <!-- Config screen strings -->
     <string name="config_cat_display">Display</string>
+    <string name="config_cat_other">Other</string>
     <string name="config_cat_save">Saving</string>
     <string name="config_cat_undo">Undo</string>
     <string name="config_cat_search">Search</string>
     <string name="config_cat_misc">Miscellaneous</string>
     <string name="config_title_line_numbers">Show line numbers</string>
     <string name="config_title_word_wrap">Word wrap</string>
+    <string name="config_title_font">Change text font</string>
     <string name="config_title_text_size">Text size</string>
     <string name="config_title_color_theme">Color theme</string>
     <string name="config_title_end_of_lines">End of lines</string>
