--- a/Ted/res/values/strings.xml
+++ b/Ted/res/values/strings.xml
@@ -25,6 +25,7 @@
     <string name="config_cat_search">Search</string>
     <string name="config_cat_misc">Miscellaneous</string>
     <string name="config_title_line_numbers">Show line numbers</string>
+    <string name="config_title_title_bar">Show title bar</string>
     <string name="config_title_word_wrap">Word wrap</string>
     <string name="config_title_font">Change text font</string>
     <string name="config_title_text_size">Text size</string>
@@ -42,6 +43,7 @@
     <string name="config_title_auto_save">Auto Save</string>
     <string name="config_title_auto_save_overwrite">Overwrite existing files</string>
     <string name="config_summary_auto_save">Automatically saves the file being edited when the app goes in background</string>
+    <string name="config_summary_title_bar">Display the title bar</string>
     <string name="config_summary_line_numbers">Display the line number at the left of the page</string>
     <string name="config_summary_word_wrap">Lines will break in new lines if they are too wide for the screen</string>
     <string name="config_summary_scroll_fling">Uncheck if you have performance issues</string>
